add refresh.yaml, resetPwd, sendEmail
