# docs/swagger.json
@@ -72,7 +72,7 @@
           }
         },
         "responses": {
-          "200": {
+          "201": {
             "description": "Registration user",
             "content": {
               "application/json": {
@@ -86,7 +86,7 @@
                   "properties": {
                     "status": {
                       "type": "integer",
-                      "example": 200
+                      "example": 201
                     },
                     "message": {
                       "type": "string",
@@ -133,7 +133,8 @@
                 "type": "object",
                 "required": [
                   "email",
-                  "password"
+                  "password",
+                  "data"
                 ],
                 "properties": {
                   "email": {
@@ -235,6 +236,91 @@
         "responses": {
           "204": {
             "description": "Logged out, no content"
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/auth/refresh": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Refreshing session",
+        "operationId": "refreshSession",
+        "description": "Refreshing session",
+        "security": [],
+        "requestBody": {
+          "description": "Refreshing user by checking the provided email and password.",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "email",
+                  "password"
+                ],
+                "properties": {
+                  "email": {
+                    "description": "The user's email address. Must be a valid email format.",
+                    "type": "string",
+                    "example": "Yacob Belinsky@feesites.com"
+                  },
+                  "password": {
+                    "description": "User's password",
+                    "type": "string",
+                    "example": "HOFi7kDgMm6EsCF"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Refreshing session",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Successfully refreshed a session!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "required": [
+                        "accessToken"
+                      ],
+                      "properties": {
+                        "accessToken": {
+                          "type": "string",
+                          "example": "4ziGnKTd7TV/QoTlhep3jCcgJERjgGg1t97j/aYz"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
           },
           "400": {
             "$ref": "#/components/responses/400"
@@ -908,15 +994,10 @@
             "type": "string",
             "example": "derrell@feesites.com"
           },
-          "password": {
-            "description": "User hashed password",
-            "type": "string",
-            "example": "$2b$10$nGfYVbHOFi7kDgMm6EsCF.TafrP3l2Vy4IWo.7.JsHzcDn7pg6vjO"
-          },
           "createdAt": {
             "description": "User data creation",
             "type": "string",
-            "example": "$2b$10$nGfYVbHOFi7kDgMm6EsCF.TafrP3l2Vy4IWo.7.JsHzcDn7pg6vjO"
+            "example": "2024-11-01T13:36:10.304+00:00"
           },
           "updatedAt": {
             "description": "User data update",
